// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Article List Item items should render without margin 1`] = `
<DocumentFragment>
  <div
    class="css-niwyl0"
  >
    <div
      class="article-image css-121g6vu"
    >
      <a
        href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
      >
        <picture
          class="css-l4lngz"
        >
          <img
            alt="This is ALT Text"
            class="css-ssxt4f"
            loading="lazy"
          />
        </picture>
      </a>
    </div>
    <div
      class="css-17cghxi"
    >
      <a
        class="article-headline css-4rb6a9"
        href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
        role="link"
      >
        <span
          class="css-17x5lw"
        >
          <span
            class="css-65zrxz"
          >
            Harry & Meghan's New Project?
          </span>
        </span>
      </a>
      <div
        class="css-1kfs2jd"
        data-testid="tag-and-flag"
      >
        <a
          class="css-18s7xts"
          href="/"
        >
          <span
            class="css-17x5lw"
          >
            <span
              class="css-17tht57"
            >
              Review
            </span>
          </span>
        </a>
        <div
          class="css-p44zak"
        >
          <hr
            aria-hidden="true"
            class="css-15kf7hd"
            data-testid="divider"
          />
        </div>
        <span
          class="css-1fq1fvw"
        >
          4 min read
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render Article List Item should render a snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1nw1nne"
  >
    <div
      class="article-image css-qjtrfy"
    >
      <a
        href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
      >
        <picture
          class="css-l4lngz"
        >
          <img
            alt="This is ALT Text"
            class="css-ssxt4f"
            loading="lazy"
          />
        </picture>
      </a>
    </div>
    <div
      class="css-17cghxi"
    >
      <a
        class="article-headline css-4rb6a9"
        href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
        role="link"
      >
        <span
          class="css-17x5lw"
        >
          <span
            class="css-65zrxz"
          >
            Harry & Meghan's New Project?
          </span>
        </span>
      </a>
      <div
        class="css-1kfs2jd"
        data-testid="tag-and-flag"
      >
        <a
          class="css-18s7xts"
          href="/"
        >
          <span
            class="css-17x5lw"
          >
            <span
              class="css-17tht57"
            >
              Review
            </span>
          </span>
        </a>
        <div
          class="css-p44zak"
        >
          <hr
            aria-hidden="true"
            class="css-15kf7hd"
            data-testid="divider"
          />
        </div>
        <span
          class="css-1fq1fvw"
        >
          4 min read
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
